[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"
authors = ["Lennart Sauerbeck <devel@lennart.sauerbeck.org>"]
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num = "0.4"
rayon = "1.8"
regex = "1.10"
